prototypes/p5b/tests/invalid/14_demeter_violation.hll
// Test: violazione Legge di Demeter (catena > 2 livelli)
// DEVE GENERARE WARNING o ERRORE

type ZipCode = String

struct City {
    ZipCode zip
}

struct Address {
    City city
}

struct Customer {
    Address address
}

struct Order {
    Customer customer
}

function getZip(Order order) -> ZipCode {
    order.customer.address.city.zip  // WARNING: catena di 4 livelli
}
